--- a/cards/components/listingItems/alarmListItem/alarmListItem.web.html
+++ b/cards/components/listingItems/alarmListItem/alarmListItem.web.html
@@ -1,14 +1,13 @@
 <md-list-item class="md-2-line alarm-list-item" ng-click="vm.alarm.onClick()" layout="row">
   <list-item-status status="vm.alarm.status"></list-item-status>
-  <icon class="alarm-list-icon list-icon" ng-class="vm.alarm.icon"></icon>
+   <md-icon style="font-size: 45px;" md-font-icon="icon-device"></md-icon>&nbsp;&nbsp;
   <div class="md-list-item-text alarm-list-item-text"
        layout-gt-md="row"
        layout-align-gt-md="start center"
        layout="column"
        flex="70">
-    <h3 class="md-headline" flex-gt-md="50"><b>{{ vm.alarm.title }}</b></h3>
-    <h4 class="md-subhead" flex-gt-md="30">{{ vm.alarm.subtitle }}</h4>
-    <p class="md-caption">{{ vm.alarm.description }}</p>
+    <h3 class="md-headline" flex-gt-md="20"><b>{{ vm.alarm.name }}</b></h3>
+    <h4 class="md-subhead" flex-gt-md="60">{{ vm.alarm.location }}</h4>
   </div>
   <div class="md-list-item-text addition-info"
        flex
@@ -16,7 +15,7 @@
        layout-align-gt-md="end center"
        layout="column"
        layout-align="center end">
-    <p ng-if="vm.alarm.timestamp" class="md-subhead" am-time-ago="vm.alarm.timestamp"></p>
+    <p ng-if="vm.alarm.lastReported" class="md-subhead" am-time-ago="vm.alarm.lastReported"></p>
     <ng-md-icon hide show-gt-sm ng-if="vm.alarm.onClick && !vm.alarm.moreOptions"
                 icon="chevron_right"
                 class="md-secondary action-icon"></ng-md-icon>
