--- a/web/client/app/components/alerts/alerts.scss
+++ b/web/client/app/components/alerts/alerts.scss
@@ -76,7 +76,7 @@ alerts {
 
 
 .filter-text {
-      width: 100px;
+      width: 150px;
       background-color: #1b202d;
       color: white;
       font-weight: bold;
@@ -94,7 +94,7 @@ alerts {
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
     }
    .button-bar {
-       background-color: #424242;
+       background-color: #5F5B5B;
        width: 100%;
        
        .md-datepicker-input-container {
@@ -141,9 +141,29 @@ alerts {
         color: #A9A9A9;
         font-weight: bold;
        }
-       md-icon {
-           color:#A9A9A9;
+
+       md-select {
+          min-width: 150px;
+      }
+
+       md-select .md-select-value {
+           border-bottom: none;
+           color: white;
+      }
+
+       md-select:not([disabled]):focus .md-select-value {
+           border-bottom: none;
+           color: white;
        }
+       .md-select-value .md-select-icon:after {
+           font-size: 20px;
+      }
+      md-icon {
+        margin: 10px;
+        margin-top: 15px;
+        font-size: 40px;
+        color:black;
+      }
    }
 
    md-select {
@@ -151,7 +171,7 @@ alerts {
 }
 
 .filter-text {
-    width: 100px;
+    width: 150px;
     background-color: #1b202d;
     color: white;
     font-weight: bold;
