--- a/web/client/app/components/fuel/fuel.html
+++ b/web/client/app/components/fuel/fuel.html
@@ -52,7 +52,7 @@
                <h3 class="panel-title ">Vehicle Detail</h3>
             </div>
             <div class="panel-body">
-                    <alarm-list-item ng-repeat="roll in vm.deviceslist" alarm="roll"></alarm-list-item>  
+                    <device-list-item ng-repeat="roll in vm.deviceslist" device="roll"></device-list-item>  
                <!--<md-input-container class="md-icon-float " style="height: 34px;width:100%; ">
                   <label>Global Search</label>
                   <md-icon style="font-size: 28px;margin: -2px; " md-font-icon="icon-search "></md-icon>
