--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -29,7 +29,8 @@
                      <h3 class="panel-title " style="padding-left: 10px; ">Distance to Empty - {{ vm.distanceData.value }} </h3>
                      <bar-chart layout-fill data="vm.distanceData "></bar-chart>
                      <br><br>
-                     <ul class="stats_box " style="width: 128%; ">
+                     <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.DGEHrs}}" header=" " content="DGE/Hrs" bgcolor="#52D5F5 " style="margin-right:10px "></tab-list>
+                     <!--<ul class="stats_box " style="width: 128%; ">
                         <li>
                            <div class="sparkline line_day ">
                               <md-icon style="font-size: 45px; " md-font-icon="icon-information "></md-icon>
@@ -39,17 +40,38 @@
                               <span class="percent up "> <i class="fa fa-caret-up "></i>{{vm.DGEHrs}}</span> 
                            </div>
                         </li>
-                     </ul>
+                     </ul>-->
                   </div>
                </div>
             </div>
          </div>
-         <div class="panel panel-primary "  flex-xs="100 " flex="50 " style="margin-left: 5px; ">
+         <div class="panel panel-primary "  flex-xs="100 " flex="50 " style="margin-left: 5px;">
             <div class="panel-heading ">
                <h3 class="panel-title ">Last Trip</h3>
             </div>
-            <center>
-            <ul class="stats_box "  flex-xs="98 " flex="98 " style="padding-left:20%;margin-bottom: 0px; ">
+            
+<br>
+
+      <div layout="column" style="margin-bottom:12px !important" flex="100" layout-xs="column">
+          <div layout="row">
+            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general" number="{{vm.engineHours}}" header="Total " content="Engine Hours" bgcolor="#FF6103 " style="margin-right:10px "></tab-list>
+            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.milesDriven}}" header=" " content="Miles Driven" bgcolor="#52D5F5 " style="margin-right:10px "></tab-list>
+          </div>
+            <br>
+          <div layout="row">
+            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-battery-100"  number="{{vm.totalGasUsed}}" header="" content="Total Gas used" bgcolor="#7B68EE
+            " style="margin-right:10px "></tab-list>
+            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-battery-0 "  number="{{vm.faultCode}}" header="" content="Fault Code" bgcolor="#73B9A2
+            " style="margin-right:10px "></tab-list>       
+           </div>
+            <br>    
+         <div layout="row">
+            <tab-list style="margin-left: 15px;width:40%;" flex="45" flex-xs="100" icon="icon-running "  number="{{vm.DGEHrs}}" header="" content=" DGE/Hrs" bgcolor="#AEACA0 " style="margin-right:10px "></tab-list>
+         </div>                   
+      </div>
+
+              
+            <!--<ul class="stats_box "  flex-xs="98 " flex="98 " style="padding-left:20%;margin-bottom: 0px; ">
                <li>
                   <div class="sparkline line_day ">
                      <md-icon style="font-size: 45px; " md-font-icon="icon-information "></md-icon>
@@ -95,8 +117,8 @@
                      <span class="percent up "> <i class="fa fa-caret-up "></i>{{vm.DGEHrs}}</span> 
                   </div>
                </li>
-            </ul>
-            <center>
+            </ul>-->
+          
          </div>
       </div>
       <div class="panel panel-primary "  flex-xs="100 " flex="100 ">
