--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -26,9 +26,22 @@
                      <fuel-chart layout-fill flex-xs="100 " flex="100 "   data="vm.gaugeData "></fuel-chart>
                   </div>
                   <div  flex="50 ">
-                     <h3 class="panel-title " style="padding-left: 10px; ">Distance to Empty - {{ vm.distanceData.value }} </h3>
+                     <!--<h3 class="panel-title " style="padding-left: 10px; ">Distance to Empty - {{ vm.distanceData.value }} </h3>
                      <bar-chart layout-fill data="vm.distanceData "></bar-chart>
-                     <br><br>
+                     <br><br>-->
+
+                    <div id="bar-1" class="bar-main-container azure">
+
+                      <div class="bar-percentage" data-percentage="46">Distance to Empty &nbsp; {{vm.distanceData.value }}</div>
+                      <md-slider-container class="slider-container" style="margin-left: 10%;width:80%;">
+                            <!--<md-slider ng-disabled="true" flex min="0"  max="60" ng-model="50" aria-label="red" id="red-slider">
+                        </md-slider>-->
+                          <md-slider flex=""  flex min="0"  max="120" ng-model="vm.distanceData.value" aria-label="red" id="red-slider">
+                        </md-slider>
+                        
+                        </md-slider-container>
+                    </div>    
+
                      <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.DGEHrs}}" header=" " content="DGE/Hrs" bgcolor="#52D5F5 " style="margin-right:10px "></tab-list>
                      <!--<ul class="stats_box " style="width: 128%; ">
                         <li>
@@ -70,7 +83,6 @@
          </div>                   
       </div>
 
-              
             <!--<ul class="stats_box "  flex-xs="98 " flex="98 " style="padding-left:20%;margin-bottom: 0px; ">
                <li>
                   <div class="sparkline line_day ">
