--- a/web/client/app/components/efficiency/efficiency.scss
+++ b/web/client/app/components/efficiency/efficiency.scss
@@ -256,5 +256,78 @@ efficiencyFile {
 
 .sparkline{min-width:50px;border-right:1px solid #dcdcdc;-webkit-box-shadow:1px 0 0 0 #fff;box-shadow:1px 0 0 0 #fff;float:left;margin-right:12px;line-height:52px}
 
+     // Slider start
+    // .slider-container{
+    //    padding-top: 100px;
+    // }
+
+    .bar-main-container {
+  margin: 10px auto;
+  width: 100%;
+  height: 30%;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  font-family: sans-serif;
+  font-weight: normal;
+  font-size: 0.8em;
+  color: #FFF;
+      background: #38B1CC;
+
+}
+
+#red-slider .md-thumb:after, #red-slider .md-track-fill{
+    background-color: orange !important;
+    border-color: orange !important;
+}
+#red-slider .md-focus-thumb, #red-slider .md-focus-ring{
+    background-color: orange;
+}
+
+.bar-percentage {
+    background: rgba(0, 0, 0, 0.13);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    padding: 9px 5px 5px 5px;
+    width: 96%;
+    height: 16px;
+}
+
+    .md-track {
+        height: 11px !important;
+            border-radius: 3px;
+    }
+
+    .md-thumb {
+        -webkit-transform: scale(0.0);
+        transform: scale(0.0) !important;
+    }
+
+    .md-slider.md-default-theme .md-track, .md-track {
+       background: white;
+    }
+
+    .md-disabled-thumb {
+        left: -14px !important;
+        top: 9px !important;
+        width: 40px !important;
+        height: 38px !important;
+        background-color:#9fb8cc !important;
+    }
+
+    .md-slider .md-thumb {
+        left: -1px;
+        top: 18px;
+    }
+
+
+
+
+/*
+Copyright 2016 Google Inc. All Rights Reserved. 
+Use of this source code is governed by an MIT-style license that can be in foundin the LICENSE file at http://material.angularjs.org/license.
+*/
+    // Slider end
 
 }
