--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -29,7 +29,7 @@
                      <h3 class="panel-title " style="padding-left: 10px; ">Distance to Empty - {{ vm.distanceData.value }} </h3>
                      <bar-chart layout-fill data="vm.distanceData "></bar-chart>
                      <br><br>
-                     <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.DGEHrs}}" header=" " content="DGE/Hrs" bgcolor="#52D5F5 " style="margin-right:10px "></tab-list>
+                     <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.liveDGEHrs}}" header=" " content="DGE/Hrs" bgcolor="#52D5F5 " style="margin-right:10px "></tab-list>
                      <!--<ul class="stats_box " style="width: 128%; ">
                         <li>
                            <div class="sparkline line_day ">
