Truck Level Screen Integration

--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -46,7 +46,7 @@
                         </md-slider-container>
                     </div>    
 
-                     <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.DGEHrs}}" header=" " content="DGE/Hrs" bgcolor="#52D5F5 " style="margin-right:10px "></tab-list>
+                     <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-warning-general"  number="{{vm.liveDGEHrs}}" header=" " content="DGE/Hrs" bgcolor="#52D5F5 " style="margin-right:10px "></tab-list>
 
                      <!--<ul class="stats_box " style="width: 128%; ">
                         <li>
