--- a/web/client/app/components/alerts/alerts.html
+++ b/web/client/app/components/alerts/alerts.html
@@ -39,7 +39,7 @@
           <div layout="row">
             <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-battery-100"  number="{{vm.protect_lamp_status}}" header="Protect" content="Lamp Status" bgcolor="#7B68EE
             " style="margin-right:10px "></tab-list>
-            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-battery-0 "  number="{{vm.amber_lamp_status}}" header="Amber" content="Lamp Status" bgcolor="#73B9A2
+            <tab-list style="margin-left: 15px;width: 40%;" flex="45" flex-xs="100" icon="icon-battery-0 "  number="{{vm.amber_lamp_status}}" header="Amber" content="Lamp Status" bgcolor="#ffbf00
             " style="margin-right:10px "></tab-list>       
            </div>
             <br>    
@@ -113,7 +113,7 @@
                     </table>
 
                     <div flex="40">
-                    <tab-list flex="80" flex-xs="100" icon="icon-battery-0 "  number="{{ vm.engineAlerts.nextMaintenance }}" content="Next Maintenance" bgcolor="#73B9A2
+                    <tab-list flex="80" flex-xs="100" icon="icon-calendar"   number="{{ vm.engineAlerts.nextMaintenance }}" content="Next Maintenance" bgcolor="#73B9A2
                     " style="margin-right:10px "></tab-list>
                     </div>       
 
