--- a/web/client/app/components/efficiency/efficiency.html
+++ b/web/client/app/components/efficiency/efficiency.html
@@ -40,7 +40,7 @@
                       <md-slider-container class="slider-container" style="margin-left: 10%;width:80%;">
                             <!--<md-slider ng-disabled="true" flex min="0"  max="60" ng-model="50" aria-label="red" id="red-slider">
                         </md-slider>-->
-                          <md-slider flex=""  flex min="0"  max="120" ng-model="vm.distanceData.value" aria-label="red" id="red-slider">
+                          <md-slider flex=""  flex min="0"  max="120" ng-model="12" aria-label="red" id="red-slider">
                         </md-slider>
                         
                         </md-slider-container>
