--- a/web/client/app/components/efficiency/efficiency.scss
+++ b/web/client/app/components/efficiency/efficiency.scss
@@ -313,7 +313,7 @@ efficiencyFile {
         top: 9px !important;
         width: 40px !important;
         height: 38px !important;
-        background-color:#9fb8cc !important;
+        background-color:orange!important;
     }
 
     .md-slider .md-thumb {
