--- a/web/client/app/components/alerts/alerts.html
+++ b/web/client/app/components/alerts/alerts.html
@@ -125,7 +125,7 @@
          <div flex="100" style="margin-top: 5px;">
             <div class="panel panel-primary"  flex-xs="100" flex="100">
                <div class="panel-heading">
-                  <h3 class="panel-title">Logs</h3>
+                  <h3 class="panel-title">Alerts</h3>
                </div>
                <div class="panel-body">
                   <md-list>
